--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
   "name": "jsonscript-js",
-  "version": "0.1.2",
+  "version": "0.1.3",
   "description": "JavaScript interpreter for JSONScript",
   "main": "lib/jsonscript.js",
   "scripts": {
-    "test": "mocha spec/*.spec.js -R spec",
+    "test": "npm run test-cov",
+    "test-spec": "mocha spec/*.spec.js -R spec",
     "test-cov": "istanbul cover -x 'spec/**' node_modules/mocha/bin/_mocha -- spec/*.spec.js -R spec",
     "test-debug": "mocha spec/*.spec.js --debug-brk -R spec"
   },
@@ -28,12 +29,13 @@
     "ajv": "^3.7.1",
     "dot": "^1.0.3",
     "json-pointer": "^0.3.1",
-    "jsonscript": "^0.1.2"
+    "jsonscript": "^0.1.3"
   },
   "devDependencies": {
     "istanbul": "^0.4.2",
-    "jsonscript-test": "^0.1.0",
-    "jsonscript-test-suite": "^0.1.0",
-    "mocha": "^2.4.5"
+    "jsonscript-test": "^0.1.1",
+    "jsonscript-test-suite": "^0.1.1",
+    "mocha": "^2.4.5",
+    "pre-commit": "^1.1.2"
   }
 }
