--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "jsonscript": "^0.1.3"
   },
   "devDependencies": {
+    "coveralls": "^2.11.6",
     "istanbul": "^0.4.2",
     "jsonscript-test": "^0.1.1",
     "jsonscript-test-suite": "^0.1.1",
