--- a/package.json
+++ b/package.json
@@ -4,10 +4,11 @@
   "description": "JavaScript interpreter for JSONScript",
   "main": "lib/jsonscript.js",
   "scripts": {
-    "test": "npm run test-cov",
+    "test": "npm run eslint && npm run test-cov",
     "test-spec": "mocha spec/*.spec.js -R spec",
     "test-cov": "istanbul cover -x 'spec/**' node_modules/mocha/bin/_mocha -- spec/*.spec.js -R spec",
-    "test-debug": "mocha spec/*.spec.js --debug-brk -R spec"
+    "test-debug": "mocha spec/*.spec.js --debug-brk -R spec",
+    "eslint": "eslint lib/*.js"
   },
   "repository": {
     "type": "git",
@@ -33,6 +34,7 @@
   },
   "devDependencies": {
     "coveralls": "^2.11.6",
+    "eslint": "^2.2.0",
     "istanbul": "^0.4.2",
     "jsonscript-test": "^0.1.1",
     "jsonscript-test-suite": "^0.1.1",
