--- a/.eslintrc.yml
+++ b/.eslintrc.yml
@@ -1,6 +1,8 @@
 env:
   node: true
 extends: 'eslint:recommended'
+globals:
+  Promise: false
 rules:
   indent: [ 2, 2, { SwitchCase: 1 } ]
   quotes: [ 2, single, avoid-escape ]
