started rewrite to wrap all values in promises

--- a/.eslintrc.yml
+++ b/.eslintrc.yml
@@ -3,6 +3,8 @@ env:
 extends: 'eslint:recommended'
 globals:
   Promise: false
+parserOptions:
+  ecmaVersion: 6
 rules:
   indent: [ 2, 2, { SwitchCase: 1 } ]
   no-trailing-spaces: 2
